# cmaptools

./: CHANGELOG.md  CONTRIBUTING.md  README.md  setup.cfg
cmaptools/: __init__.py  cmaptools.py
docs/notebooks/: test_sqcbar.ipynb
