[metadata]
name = cmaptools
version = 0.0.4
url = https://github.com/mycarta/cmaptools
Author: Matteo Niccoli
Author email: matteo@mycarta.ca
description = A collection of functions to analyze and fix bad colormaps
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Intended Audience :: Science/Research
    Development Status :: 3 - Alpha
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
# Use this for flat latyout.
packages = cmaptools

# Use nothing for src-layout.
python_requires = >= 3.6
install_requires =
    numpy
	matplotlib

# Options for pip, like pip install .[dev]
[options.extras_require]
test = pytest
dev = build; twine; pytest

# Options for your various tools, eg pytest, 
[tool:pytest]
addopts = --doctest-modules
